--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   google_maps_flutter: ^0.5.21+11
   geolocator: ^5.1.5
   http: ^0.12.0+2
+  oauth2: ^1.5.0
+  flutter_secure_storage: ^3.3.1+1
   flutter:
     sdk: flutter
 
