--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^0.12.0+2
   oauth2: ^1.5.0
   flutter_secure_storage: ^3.3.1+1
+  shared_preferences: ^0.5.4+6
   flutter:
     sdk: flutter
 
