--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   geolocator: ^5.1.5
   http: ^0.12.0+2
   oauth2: ^1.5.0
-  flutter_secure_storage: ^3.3.1+1
   shared_preferences: ^0.5.4+6
+  json_annotation: ^3.0.0
+  json_serializable: ^3.2.3
+  build_runner: ^1.0.0
   flutter:
     sdk: flutter
 
@@ -61,7 +63,7 @@ flutter:
     - assets/dependentes.png
     - assets/pagamentos.png
     - assets/postumo.png
-    - assets/person5.png
+    - assets/person6.png
     - assets/image-1.png
     - assets/image-2.png
     - assets/image-3.png
